apps/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: ntfy
  ports:
    - name: http
      port: 8095
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy-proxy
  namespace: ntfy
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: ntfy-proxy
  ports:
    - name: http
      port: 8096
      targetPort: 4180
      protocol: TCP
